# vaultworks

./: .gitignore  Cargo.toml  DEVELOPER.md  README.md
apps/abacus-docs/: Cargo.toml
apps/abacus-docs/src/: main.rs
apps/ap/: Cargo.toml
apps/ap/src/: main.rs  scenario_1.rs  scenario_3.rs  tx_sender.rs
apps/document_vis/: Cargo.toml
apps/document_vis/src/: main.rs
apps/scenarios/: Cargo.toml  README.md
apps/scenarios/src/: README.md  main.rs  scenario_1.rs  scenario_2.rs  scenario_3.rs  scenario_4.rs  scenario_5.rs
contracts/abacus/: Cargo.toml
contracts/abacus/src/: lib.rs  main.rs  program.rs  runtime.rs  test.rs
contracts/alchemist/: Cargo.toml
contracts/alchemist/src/: lib.rs  main.rs
contracts/banker/: Cargo.toml
contracts/banker/src/: lib.rs  main.rs
contracts/castle/: Cargo.toml
contracts/castle/src/: lib.rs  main.rs
contracts/clerk/: Cargo.toml
contracts/clerk/src/: lib.rs  main.rs  program.rs  test.rs
contracts/constable/: Cargo.toml
contracts/constable/src/: lib.rs  main.rs
contracts/daxos/: Cargo.toml
contracts/daxos/src/: lib.rs
contracts/devil/: Cargo.toml
contracts/devil/src/: lib.rs  program.rs  test.rs
contracts/factor/: Cargo.toml
contracts/factor/src/: lib.rs  main.rs
contracts/gate/: Cargo.toml
contracts/gate/src/: lib.rs  main.rs
contracts/granary/: Cargo.toml
contracts/granary/src/: lib.rs  main.rs
contracts/guildmaster/: Cargo.toml
contracts/guildmaster/src/: lib.rs  main.rs
contracts/market/: Cargo.toml
contracts/scribe/: Cargo.toml
contracts/scribe/src/: lib.rs  main.rs
contracts/steward/: Cargo.toml
contracts/steward/src/: lib.rs  main.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  main.rs
contracts/vault_native/: Cargo.toml
contracts/vault_native/src/: lib.rs  main.rs
contracts/vault_native_claims/: Cargo.toml
contracts/vault_native_claims/src/: lib.rs  main.rs
contracts/vault_native_orders/: Cargo.toml  rust-toolchain.toml
contracts/vault_native_orders/src/: lib.rs  main.rs
contracts/vault_requests/: Cargo.toml
contracts/vault_requests/src/: lib.rs
contracts/worksman/: Cargo.toml  code.txt
contracts/worksman/src/: lib.rs  main.rs
docs/: Addendum A - Vectorized Rebalancing and Dynamic Capacity Logic.tex  Aligning Market and Index Vectors.latex  Aligning Market and Index Vectors.tex  Castle.drawio  Components.drawio  Diamond.drawio  Gas-Efficient Vector Processing for On-Chain Index Order Execution.latex  Gas-Efficient Vector Processing for On-Chain Index Order Execution.tex  KeeperVendor.drawio  README.md  Technical Brief - Systematic Risk Controls And Execution Framework.tex  UpdateIndexQuotes.drawio  VIL VM Technical Specification.tex  VIL_Stack.drawio  VaultWorks.drawio  Vectorized Index Buy Order Execution Algorithm.latex
libs/abacus-formulas/: Cargo.toml
libs/abacus-formulas/src/: add_market_assets.rs  create_market.rs  execute_buy_order.rs  execute_rebalance.rs  execute_sell_order.rs  execute_transfer.rs  lib.rs  solve_quadratic_ask.rs  solve_quadratic_bid.rs  submit_buy_order.rs  submit_sell_order.rs  update_margin.rs  update_market_data.rs  update_quote.rs  update_rebalance.rs  update_supply.rs
libs/abacus-runtime/: Cargo.toml  README.md
libs/abacus-runtime/src/: lib.rs  runtime.rs  test.rs
libs/common/: Cargo.toml
libs/common-bls/: Cargo.toml
libs/common-bls-signing/: Cargo.toml
libs/common-bls-signing/src/: bls.rs  bls_signing.rs  lib.rs  signing_key.rs  threshold.rs
libs/common-bls/src/: affine.rs  bls.rs  keccak_hash.rs  lib.rs
libs/common-contracts/: Cargo.toml
libs/common-contracts/src/: lib.rs
libs/common-contracts/src/contracts/: acl.rs  calls.rs  castle.rs  clerk.rs  clerk_util.rs  formulas.rs  gate.rs  keep.rs  keep_calls.rs  storage.rs  vault.rs  vault_native.rs  vault_requests.rs
libs/common-contracts/src/interfaces/: abacus.rs  alchemist.rs  banker.rs  clerk.rs  constable.rs  factor.rs  guildmaster.rs  scribe.rs  steward.rs  vault.rs  vault_native.rs  vault_native_claims.rs  vault_requests.rs  worksman.rs
libs/common-ethers/: Cargo.toml
libs/common-ethers/src/: contracts.rs  lib.rs  tx_sender.rs
libs/common/src/: amount.rs  labels.rs  lib.rs  log.rs  math.rs  vector.rs
libs/common/src/abacus/: program_error.rs
libs/common/src/contracts/: keep_calls.rs
libs/decon/: Cargo.toml
libs/decon/src/: contracts.rs  tx_sender.rs
libs/deli/: Cargo.toml
libs/deli/src/: contracts.rs  lib.rs  log.rs  storage.rs  vis.rs
libs/deli/src/contracts/: acl.rs  calls.rs  castle.rs  clerk.rs  delegate.rs  granary.rs  keep.rs  keep_calls.rs  storage.rs
libs/deli/src/contracts/interfaces/: banker.rs  castle.rs  clerk.rs  constable.rs  factor.rs  granary.rs  guildmaster.rs  scribe.rs  worksman.rs
libs/deli/src/interfaces/: factor.rs  granary.rs
libs/icore/: Cargo.toml
libs/icore/src/: lib.rs
libs/icore/src/vil/: add_market_assets.rs  create_market.rs  execute_buy_order.rs  solve_quadratic.rs  update_assets.rs  update_margin.rs  update_market_data.rs  update_quote.rs  update_supply.rs
proc-macros/abacus-macros/src/: lib.rs
proc-macros/devil-macros/src/: lib.rs
scripts/: call.sh  call0.sh  call1.sh  call2.sh  castle.sh  check-all.sh  check.sh  clerk.sh  constructor.sh  deploy-construct.sh  deploy-construct1.sh  deploy-construct2.sh  deploy-treasury.sh  deploy.sh  export-abi.sh  granary.sh  lib-test-debug.sh  parse_amount.py  parse_vector_bytes.py  roles.sh  send.sh  send1.sh  send2.sh  send3.sh  send4.sh  test-debug.sh  treasury-deploy-all.sh  treasury-deploy-gate.sh  treasury-deploy-treasury.sh  treasury-upgrade-all.sh  treasury-upgrade-gate.sh  treasury.sh  upgrade-treasury.sh  upgrade.sh  vars.sh  vault.sh  vector_to_bytes.py
