[workspace]
resolver = "2"
members = [
    # Stylus Contract Packages
    "contracts/banker",
    "contracts/castle",
    "contracts/clerk",
    "contracts/constable",
    "contracts/factor",
    "contracts/gate",
    "contracts/granary",
    "contracts/guildmaster",
    "contracts/scribe",
    "contracts/treasury",
    "contracts/worksman",

    # Library Packages
    "libs/decon",
    "libs/deli",
    "libs/icore",

    # Native Application Package
    "apps/scenarios",
    "apps/document_vis",

    "proc-macros/amount-macros",
    "proc-macros/devil-macros",
    "proc-macros/labels-macros",
    "proc-macros/vector-macros",
]

[workspace.dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
amount-macros = { path = "./proc-macros/amount-macros" }
chrono = "0.4.42"
clap = "4.5"
decon = { path = "libs/decon" }
deli = { path = "libs/deli" }
devil-macros = { path = "./proc-macros/devil-macros" }
dotenv = "0.15.0"
ethers = "2.0"
eyre = "0.6.8"
futures = "0.3"
hex = { version = "0.4", default-features = false }
icore = { path = "libs/icore" }
itertools = { version = "0.14" }
labels-macros = { path = "./proc-macros/labels-macros" }
openzeppelin-stylus = { version = "0.3.0" }
openzeppelin-stylus-proc = { version = "0.3.0" }
regex = "1.12"
reqwest = { version = "0.12", default-features = false }
stylus-sdk = "0.9.0"
tokio = "1.12.0"
vector-macros = { path = "./proc-macros/vector-macros" }
