[workspace]
resolver = "2"
members = [
    # Stylus Contract Packages
    "contracts/alchemist",
    "contracts/banker",
    "contracts/castle",
    "contracts/clerk",
    "contracts/constable",
    "contracts/factor",
    "contracts/gate",
    "contracts/guildmaster",
    "contracts/scribe",
    "contracts/steward",
    "contracts/treasury",
    "contracts/vault",
    "contracts/vault_native",
    "contracts/vault_native_claims",
    "contracts/vault_native_orders",
    "contracts/worksman",

    # Library Packages
    "libs/abacus-formulas",
    "libs/abacus-runtime",
    "libs/common",
    "libs/common-bls",
    "libs/common-bls-signing",
    "libs/common-contracts",

    "proc-macros/abacus-macros",
    "proc-macros/amount-macros",
    "proc-macros/labels-macros",
    "proc-macros/vector-macros",
]

[workspace.dependencies]
alloy = { version = "=0.7.3", features = [
    "contract",
    "network",
    "providers",
    "provider-http",
    "rpc-client",
    "rpc-types-eth",
    "signer-local",
    "getrandom",
] }
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "tiny-keccak",
] }
abacus-formulas = { path = "./libs/abacus-formulas" }
abacus-macros = { path = "./proc-macros/abacus-macros" }
abacus-runtime = { path = "./libs/abacus-runtime" }
alloy-sol-macro = "=0.8.20"
alloy-sol-types = "=0.8.20"
amount-macros = { path = "./proc-macros/amount-macros" }
bls12_381 = { version = "0.8.0", features = ["experimental"] }
chrono = "0.4.42"
clap = "4.5"
common = { path = "libs/common" }
common-bls = { path = "libs/common-bls" }
common-contracts = { path = "libs/common-contracts" }
dotenv = "0.15.0"
digest = "0.9"
ethers = "2.0"
eyre = "0.6.8"
futures = "0.3"
ff = "0.13.1"
ff-zeroize = "0.6.3"
hex = { version = "0.4", default-features = false }
itertools = { version = "0.14" }
labels-macros = { path = "./proc-macros/labels-macros" }
openzeppelin-stylus = { version = "0.3.0" }
openzeppelin-stylus-proc = { version = "0.3.0" }
pairing = "0.23.0"
rand_core = "=0.6.4"
regex = "1.12"
reqwest = { version = "0.12", default-features = false }
ruint = "^1.12.3"
serde = { version = "^1.0", features = ["derive"] }
stylus-sdk = "0.9.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
vector-macros = { path = "./proc-macros/vector-macros" }

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"
