[package]
name = "alchemist"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Alchemist (Rebalances Indexes)"

[dependencies]
abacus-formulas = { workspace = true }
abacus-macros = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
amount-macros = { workspace = true }
common = { workspace = true, features = ["stylus"] }
common-contracts = { workspace = true, features = ["stylus"] }
hex = { workspace = true }
labels-macros = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"]}
vector-macros = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio = { workspace = true, features = ["full"] }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
dotenv = { workspace = true }
common = { workspace = true, features = ["stylus-test"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "common-contracts/stylus-export-abi"]
test-debug = ["stylus-sdk/debug", "common/debug", "common/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "alchemist"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
