[package]
name = "castle"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Castle (A Diamond w/ Access Control List)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
amount-macros = { workspace = true }
deli = { workspace = true, features = ["stylus", "reentrant"] }
abacus-macros = { workspace = true }
hex = { workspace = true }
icore = { workspace = true }
labels-macros = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"] }
vector-macros = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
deli = { workspace = true, features = ["stylus"] }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "deli/export-abi"]
test-debug = ["stylus-sdk/debug", "deli/debug", "deli/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "dior"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
