[package]
name = "castle"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Castle (A Diamond w/ Access Control List)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
amount-macros = { workspace = true }
common = { workspace = true, features = ["stylus", "reentrant"] }
abacus-macros = { workspace = true }
hex = { workspace = true }
abacus-formulas = { workspace = true }
labels-macros = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"] }
vector-macros = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
common = { workspace = true, features = ["stylus"] }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "common/export-abi"]
test-debug = ["stylus-sdk/debug", "common/debug", "common/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "dior"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
