[package]
name = "clerk"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Clerk (Stores high-dimensional vectors)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
common = { workspace = true, features = ["stylus", "amount-sqrt"] }
common-contracts = { workspace = true, features = ["stylus"] }
hex = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"]}

[dev-dependencies]
abacus-formulas = { workspace = true }
abacus-macros = { workspace = true }
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
amount-macros = { workspace = true }
common = { workspace = true, features = ["stylus-test"] }
common-contracts = { workspace = true, features = ["stylus-test"]}
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
labels-macros = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }
vector-macros = { workspace = true }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "common-contracts/stylus-export-abi"]
test-debug = ["stylus-sdk/debug", "common/debug", "common/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "abacus"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
