[package]
name = "constable"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Constable (Manages the Castle: Configures facets of a Diamond)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"] }
hex = { workspace = true }
deli = { workspace = true, features = ["stylus", "reentrant"] }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio = { workspace = true, features = ["full"] }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
dotenv = { workspace = true }
deli = { workspace = true, features = ["stylus"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "deli/export-abi"]
test-debug = ["stylus-sdk/debug", "deli/debug", "deli/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "constable"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
