[package]
name = "constable"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Constable (Manages the Castle: Configures facets of a Diamond)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
common = { workspace = true, features = ["stylus"] }
common-contracts = { workspace = true, features = ["stylus"] }
hex = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"] }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
common = { workspace = true, features = ["stylus-test"] }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "common-contracts/stylus-export-abi"]
test-debug = ["stylus-sdk/debug", "common/debug", "common/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "constable"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
