[package]
name = "factor"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Factor (Intermediary between Traders and Vendors: Facilitates trading)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
hex = { workspace = true }
deli = { workspace = true, features = ["stylus"] }
amount-macros = { workspace = true }
abacus-macros = { workspace = true }
labels-macros = { workspace = true }
vector-macros = { workspace = true }
icore = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio = { workspace = true, features = ["full"] }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
dotenv = { workspace = true }
deli = { workspace = true, features = ["stylus"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "deli/export-abi"]
test-debug = ["stylus-sdk/debug", "deli/debug", "deli/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "dior"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
