[package]
name = "gate"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Gate"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
amount-macros = { workspace = true }
deli = { workspace = true, features = ["stylus"] }
devil-macros = { workspace = true }
hex = { workspace = true }
icore = { workspace = true }
labels-macros = { workspace = true }
openzeppelin-stylus = { workspace = true }
openzeppelin-stylus-proc = { workspace = true }
stylus-sdk = { workspace = true }
vector-macros = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
deli = { workspace = true, features = ["stylus"] }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi", "deli/export-abi"]
test-debug = ["stylus-sdk/debug", "deli/debug", "deli/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "dior"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = "s"
