[package]
name = "granary"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Granary (Stores high-dimensional vectors)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
hex = { workspace = true }
deli = { workspace = true, features = ["stylus", "amount-sqrt"] }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio = { workspace = true, features = ["full"] }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
dotenv = { workspace = true }
deli = { workspace = true, features = ["stylus"] }
amount-macros = { workspace = true }
devil-macros = { workspace = true }
labels-macros = { workspace = true }
vector-macros = { workspace = true }
icore = { workspace = true }

[features]
default = ["mini-alloc", "stylus-sdk/debug", "deli/debug"]
export-abi = ["stylus-sdk/export-abi", "deli/export-abi"]
test-debug = ["stylus-sdk/debug", "deli/debug", "deli/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "devil"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = "s"
