[package]
name = "scribe"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Scribe (Verifies documents: Verifies signatures)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
hex = { workspace = true }
deli = { workspace = true, features = ["stylus"] }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio = { workspace = true, features = ["full"] }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
dotenv = { workspace = true }
deli = { workspace = true, features = ["stylus"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "deli/export-abi"]
test-debug = ["stylus-sdk/debug", "deli/debug", "deli/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "scribe"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
