[package]
name = "treasury"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Treasury"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
deli = { workspace = true, features = ["stylus"] }
openzeppelin-stylus = { workspace = true }
openzeppelin-stylus-proc = { workspace = true }
stylus-sdk = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
deli = { workspace = true, features = ["stylus"] }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi", "deli/export-abi"]
test-debug = ["stylus-sdk/debug", "deli/debug", "deli/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "dior"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"
