[package]
name = "treasury"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Treasury (Stores coin of the Kingdom: Gas token, and ERC20 Token deployed to parent network)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
common = { workspace = true, features = ["stylus", "reentrant"] }
openzeppelin-stylus = { workspace = true }
openzeppelin-stylus-proc = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"]}

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
common = { workspace = true, features = ["stylus"] }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi", "common/export-abi"]
test-debug = ["stylus-sdk/debug", "common/debug", "common/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "dior"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
