[package]
name = "worksman"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Worksman (Constructs buildings: Deploys smart-contracts)"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
common = { workspace = true, features = ["stylus", "reentrant"] }
common-contracts = { workspace = true, features = ["stylus", "reentrant"] }
hex = { workspace = true }
stylus-sdk = { workspace = true, features = ["reentrant"]}

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
common = { workspace = true, features = ["stylus"] }
dotenv = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }
stylus-sdk = { workspace = true, features = ["stylus-test"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi", "common/export-abi"]
test-debug = ["stylus-sdk/debug", "common/debug", "common/stylus-test"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "worksman"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
