[package]
name = "abacus-runtime"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Abacus Runtime: Vector Intermediate Language Virtual Machine (VIL VM)"

[lib]
crate-type = ["lib"]

[dependencies]
stylus-sdk = { workspace = true, optional = true }
common = { workspace = true, features = ["amount-sqrt"] }

[dev-dependencies]
stylus-sdk = { workspace = true, features = ["stylus-test"] }
common = { workspace = true, features = ["stylus-test"] }
amount-macros = { workspace = true }
abacus-macros = { workspace = true }
labels-macros = { workspace = true }
vector-macros = { workspace = true }
abacus-formulas = { workspace = true }

[features]
default = []
debug = ["common/debug"]

# if we're compiling smart-contracts
stylus = ["common/stylus", "stylus-sdk", "stylus-sdk/mini-alloc", "stylus-sdk/reentrant"]

# if we're compiling smart-contracts with debug enabled
stylus-debug = ["common/stylus-debug", "stylus", "stylus-sdk/debug", "debug"]

# if we're compiling smart-contracts tests
stylus-test = ["common/stylus-test", "stylus-sdk", "stylus-sdk/stylus-test"]

# if we want to run unit tests with debug
test-debug = ["stylus-test", "debug"]