[package]
name = "common-contracts"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Common Contracts"

[lib]
crate-type = ["lib"]

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true, optional = true }
common = { workspace = true }

[dev-dependencies]
stylus-sdk = { workspace = true, features = ["stylus-test"] }
common = { workspace = true, features = ["stylus-test"] }
amount-macros = { workspace = true }
abacus-macros = { workspace = true }
labels-macros = { workspace = true }
vector-macros = { workspace = true }
abacus-formulas = { workspace = true }

[features]
default = []
debug = []

# if we're compiling smart-contracts
stylus = [
    "common/stylus",
    "stylus-sdk",
    "stylus-sdk/mini-alloc",
    "stylus-sdk/reentrant",
]

# if we're compiling smart-contracts with debug enabled
stylus-debug = ["common/stylus-debug", "stylus", "stylus-sdk/debug", "debug"]

# if we're compiling smart-contracts tests
stylus-test = ["common/stylus-test", "stylus-sdk", "stylus-sdk/stylus-test"]

# if we're exporting Solidity ABI for contracts
stylus-export-abi = ["stylus-sdk/export-abi"]